--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-dropzone": "^10.1.3",
+    "react-icons": "^3.5.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "socket.io-client": "^2.2.0",
+    "use-socketio": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
